--- a/MarioGame/MarioGame.vcxproj
+++ b/MarioGame/MarioGame.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClCompile Include="src\Animator.cpp" />
     <ClCompile Include="src\AudioManager.cpp" />
+    <ClCompile Include="src\CollisionManager.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Map.cpp" />
@@ -153,6 +154,7 @@
   <ItemGroup>
     <ClInclude Include="src\Animator.h" />
     <ClInclude Include="src\AudioManager.h" />
+    <ClInclude Include="src\CollisionManager.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\Map.h" />
     <ClInclude Include="src\Mario.h" />
