--- a/MarioGame/MarioGame.vcxproj
+++ b/MarioGame/MarioGame.vcxproj
@@ -143,6 +143,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Objects\Flag.cpp" />
     <ClCompile Include="src\Algorythms\QuadTree.cpp" />
     <ClCompile Include="src\Brick.cpp" />
     <ClCompile Include="src\Animator.cpp" />
@@ -158,6 +159,7 @@
     <ClCompile Include="src\Manager\TextureManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Objects\Flag.h" />
     <ClInclude Include="src\Algorythms\QuadTree.h" />
     <ClInclude Include="src\Block.h" />
     <ClInclude Include="src\Brick.h" />
