--- a/MarioGame/MarioGame.vcxproj.filters
+++ b/MarioGame/MarioGame.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="src\Objects\Flag.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Objects\Items\FireFlower.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Animator.h">
@@ -117,6 +120,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Objects\Flag.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Objects\Items\FireFlower.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
