--- a/MarioGame/MarioGame.vcxproj.filters
+++ b/MarioGame/MarioGame.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="src\TClock.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\GameState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Game.h">
